Убран тип MutableSharedFlow & SharedFlow. Он не нужен, т.к. хранит последние replay значений и выплёвывает их при подключении. Исправлена работа с HoloColorPicker: при подключении бара он выдаёт два (и более) значений. Первое -- "чистое", т.е. без вмешательства баров.

--- a/app/src/main/res/layout-land/fragment_color.xml
+++ b/app/src/main/res/layout-land/fragment_color.xml
@@ -26,8 +26,8 @@
         app:layout_constraintStart_toEndOf="@+id/pickerColor"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.larswerkman.holocolorpicker.SVBar
-            android:id="@+id/svbarColor"
+        <com.larswerkman.holocolorpicker.ValueBar
+            android:id="@+id/valueColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/switchEnableColor"
@@ -43,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/svbarColor" />
+            app:layout_constraintTop_toBottomOf="@+id/valueColor" />
 
         <TextView
             android:id="@+id/tvTitleColor"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:text="@string/tvTitleColor"
             android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/svbarColor"
+            app:layout_constraintBottom_toTopOf="@+id/valueColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
