--- a/app/src/main/res/layout/fragment_tail.xml
+++ b/app/src/main/res/layout/fragment_tail.xml
@@ -25,13 +25,13 @@
         android:id="@+id/pickerTail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/svbarTail"
+        app:layout_constraintBottom_toTopOf="@+id/valueTail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleTail" />
 
-    <com.larswerkman.holocolorpicker.SVBar
-        android:id="@+id/svbarTail"
+    <com.larswerkman.holocolorpicker.ValueBar
+        android:id="@+id/valueTail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/slTailSpeed"
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toTopOf="@+id/slTailWidth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svbarTail" />
+        app:layout_constraintTop_toBottomOf="@+id/valueTail" />
 
     <TextView
         android:id="@+id/tvTitleTail"
@@ -71,7 +71,7 @@
         app:layout_constraintBottom_toTopOf="@+id/slTailSpeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svbarTail" />
+        app:layout_constraintTop_toBottomOf="@+id/valueTail" />
 
     <TextView
         android:id="@+id/tvTailLen"
