--- a/app/src/main/res/layout/fragment_color.xml
+++ b/app/src/main/res/layout/fragment_color.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.control.ColorFragment">
 
-    <com.larswerkman.holocolorpicker.SVBar
-        android:id="@+id/svbarColor"
+    <com.larswerkman.holocolorpicker.ValueBar
+        android:id="@+id/valueColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/switchEnableColor"
@@ -19,7 +19,7 @@
         android:id="@+id/pickerColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/svbarColor"
+        app:layout_constraintBottom_toTopOf="@+id/valueColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleColor" />
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svbarColor" />
+        app:layout_constraintTop_toBottomOf="@+id/valueColor" />
 
     <TextView
         android:id="@+id/tvTitleColor"
