--- a/app/src/main/res/layout-land/fragment_blink.xml
+++ b/app/src/main/res/layout-land/fragment_blink.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.control.BlinkFragment">
 
+
+    <com.larswerkman.holocolorpicker.ColorPicker
+        android:id="@+id/pickerBlink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
@@ -15,26 +26,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/pickerBlink"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tvFrequency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tvBlinkFrequency"
-            app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.19"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/valueBlink" />
-
-        <com.larswerkman.holocolorpicker.ValueBar
-            android:id="@+id/valueBlink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitleBlink" />
 
         <TextView
             android:id="@+id/tvTitleBlink"
@@ -47,10 +38,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.larswerkman.holocolorpicker.ValueBar
+            android:id="@+id/valueBlink"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/saturationBlink"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitleBlink" />
+
+        <com.larswerkman.holocolorpicker.SaturationBar
+            android:id="@+id/saturationBlink"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/valueBlink" />
+
         <com.google.android.material.slider.Slider
             android:id="@+id/slBlinkFrequency"
-            android:layout_width="308dp"
-            android:layout_height="46dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/tvBlinkFrequency"
             android:stepSize="1"
             android:value="20.0"
@@ -59,7 +70,7 @@
             app:layout_constraintBottom_toTopOf="@+id/swEnableBlink"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/valueBlink"
+            app:layout_constraintTop_toBottomOf="@+id/saturationBlink"
             app:tickVisible="true" />
 
         <androidx.appcompat.widget.SwitchCompat
@@ -72,16 +83,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/slBlinkFrequency" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.larswerkman.holocolorpicker.ColorPicker
-        android:id="@+id/pickerBlink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
