--- a/app/src/main/res/layout/fragment_blink.xml
+++ b/app/src/main/res/layout/fragment_blink.xml
@@ -18,13 +18,26 @@
 
     <com.larswerkman.holocolorpicker.ValueBar
         android:id="@+id/valueBlink"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/saturationBlink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickerBlink" />
+
+    <com.larswerkman.holocolorpicker.SaturationBar
+        android:id="@+id/saturationBlink"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/valueBlink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slBlinkFrequency" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slBlinkFrequency"
@@ -40,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/valueBlink"
+        app:layout_constraintTop_toBottomOf="@+id/saturationBlink"
         app:tickVisible="true" />
 
     <androidx.appcompat.widget.SwitchCompat
@@ -65,19 +78,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvFrequency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/tvBlinkFrequency"
-        app:layout_constraintBottom_toTopOf="@+id/slBlinkFrequency"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/valueBlink"
-        app:layout_constraintVertical_bias="0.3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
