--- a/app/src/main/res/layout/fragment_regime.xml
+++ b/app/src/main/res/layout/fragment_regime.xml
@@ -2,18 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/csRegime"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ContainerFragment">
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vpContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+    tools:context=".ui.RegimeFragment">
+    <NumberPicker
+        android:id="@+id/npRegime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
